--- a/tasks/submit-doubao-stt/task.oo.yaml
+++ b/tasks/submit-doubao-stt/task.oo.yaml
@@ -1,20 +1,20 @@
 inputs_def:
   - handle: audio_url
-    description: "URL of the audio file to transcribe"
+    description: "%url-of-the-audio-file-to-transcribe%"
     json_schema:
       type: string
     nullable: false
 
   - handle: format
-    description: "Audio format (e.g., mp3, wav, m4a)"
+    description: "%audio-format-e-g-mp3-wav-m4a%"
     json_schema:
       type: string
-    nullable: false
     value: "mp3"
+    nullable: false
 
 outputs_def:
   - handle: task_id
-    description: "Task ID for retrieving the transcription result"
+    description: "%task-id-for-retrieving-the-transcription-result%"
     json_schema:
       type: string
 
@@ -24,8 +24,7 @@ executor:
     entry: __init__.py
     spawn: false
 
-title: "Submit Doubao STT"
+title: "%submit-doubao-stt%"
 icon: ":carbon:microphone:"
-description: "Submit an audio file to Doubao Speech-to-Text service and get a
-  task ID for result retrieval"
+description: "%submit-an-audio-file-to-doubao-speech-to-text-service-and-get-a%"
 private: true
