feat(i18n): add output path description for TTS save file

--- a/subflows/doubao-tts-to-file/subflow.oo.yaml
+++ b/subflows/doubao-tts-to-file/subflow.oo.yaml
@@ -161,6 +161,7 @@ inputs_def:
     nullable: false
     executor_name: python
   - handle: saved_path
+    description: "%output-path-for-saving-the-audio-file%"
     json_schema:
       type: string
       ui:widget: save
